k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
  namespace: <NAMESPACE_SERVICE>
spec:
  selector:
    app: api-movies
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
