k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  namespace: <NAMESPACE>
spec:
  rules:
  - host: <HOST>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: movies-service
            port: 
              number: 80
